<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Fitness App</string>

    <string name="action_report">Report</string>
    <string name="action_settings">Settings</string>

    <string name="today">Today</string>
    <string name="profile">Your Profile</string>
    <string name="default_steps">1550</string>
    <string name="steps_target">Goal: 6000 Steps</string>
    <string name="default_distance">0.00</string>
    <string name="miles_uom">Miles</string>
    <string name="default_calories">0</string>
    <string name="calories_uom">kcal</string>
    <string name="default_time">0</string>
    <string name="goal" tools:keep="@string/goal">Goal: 6000 Steps</string>
    <string name="user_goal">Steps Goal</string>
    <string name="steps_left" tools:keep="@string/steps_left">5400 Steps left</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="height_cm">Height (CM)</string>
    <string name="save">Save</string>
    <string name="_600">600</string>
    <string name="steps">Steps</string>
    <string name="walking">Walking</string>
    <string name="burn_calories">Burn Calories</string>
    <string name="active_time">Active Time</string>
    <string name="minutes">Min</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="goal_label">Goal : </string>
    <string name="steps_label"> Steps</string>
    <string name="step_label">Steps Walked Today: </string>
    <string name="minutes_label">Active Minutes: </string>
    <string name="distance_label">Distance: </string>
    <string name="miles_label">Miles</string>
    <string name="calories_label">Calories Burnt:</string>
    <string name="kcal_label">kcal</string>
    <string name="every_step_counts">Keep walking. Every Step Counts!</string>
    <string name="treadmill">Download Recommended Treadmill</string>
    <string name="treadmill_description">Treadmill</string>
    <string name="action_exercise">Exercise Equipment</string>
    <string name="download_treadmill_sample">Download Sample Treadmill</string>
    <string name="you_can_use_a_treadmill_to_achive_your_step_goal_faster">You can use a treadmill to achieve your goal faster</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="steps">
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
        <item>11000</item>
        <item>12000</item>
        <item>13000</item>
        <item>14000</item>
        <item>15000</item>
    </string-array>

</resources>
