<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="56dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/today"
            android:textColor="@color/primaryTextColor"
            android:textSize="56sp" />

        <TextView
            android:id="@+id/steps_goal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/steps_target"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/scrim">


            <com.txusballesteros.widgets.FitChart
                android:id="@+id/fitchart"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                app:animationMode="overdraw"
                app:backStrokeColor="#ff0000"
                app:strokeSize="10dp"
                app:valueStrokeColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="48dp"
                android:text="@string/steps"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/_600"
                android:textColor="@android:color/white"
                android:textSize="48sp"
                android:textStyle="bold" />
        </FrameLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/scrim"
            android:paddingTop="56dp">

            <ImageView
                android:id="@+id/distance_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/walking"
                android:src="@drawable/person_walking_icon" />

            <TextView
                android:id="@+id/distance_walked_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/distance_imageview"
                android:text="@string/default_distance"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/distance_walked_textview"
                android:text="@string/miles_uom"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/burn_calories"
                android:src="@drawable/calories_burned_icon" />

            <TextView
                android:id="@+id/calories_burnt_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/distance_imageview"
                android:layout_centerHorizontal="true"
                android:text="@string/default_calories"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/distance_walked_textview"
                android:layout_centerHorizontal="true"
                android:text="@string/calories_uom"
                android:textColor="@android:color/white"
                android:textSize="16sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/active_time"
                android:src="@drawable/walking_time_icon" />

            <TextView
                android:id="@+id/time_walked_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/distance_imageview"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:text="@string/default_time"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/distance_walked_textview"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:text="@string/minutes"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>